<resources>
    <string name="app_name">FamilyMapClient</string>

    <!--Login Fragment-->
    <!-- Field Names -->
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="passWord">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Button Names -->
    <string name="signinButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Map Fragment-->


    <!--Action Bar Contents-->
    <string name="searchItem">Search</string>
    <string name="settingsItem">Settings</string>


    <!--Text View Content-->
    <string name="iconContent"></string>
    <string name="mapFragmentMessage">Click on a marker to see event details</string>


    <!--Person Activity-->
    <string name="personActivityMessage">This is my person activity</string>
    <string name="clickedfirstName">First Name</string>
    <string name="clickedlastName">Last Name</string>
    <string name="clickedlastNameGender">Gender</string>
    <string name="eventTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="eventIcon"></string>
    <string name="genderIcon"></string>

    <!--Search Activity-->
    <string name= "searchActivityMessage">This is my search activity</string>



    <!--Settings Activity-->
    <string name= "settingsActivityMessage">This is my settings activity</string>
    <string name= "lifeStoryLines">Life Story Lines</string>
    <string name= "showLifeStoryLines">SHOW LIFE STORY LINES</string>
    <string name= "familyTreeLines">Family Tree Lines</string>
    <string name= "showFamilyTreeLines">SHOW FAMILY TREE LINES</string>
    <string name= "spouseLines">Spouse Lines</string>
    <string name= "showSpouseLines">SHOW SPOUSE LINES</string>
    <string name= "fatherSide">Father\'s Side</string>
    <string name= "filterFatherSide">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name= "motherSide">Mother\'s Side</string>
    <string name= "filterMotherSide">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name= "maleEvents">Male Events</string>
    <string name= "filterMaleEvents">FILTER EVENTS BASED ON GENDER</string>
    <string name= "femaleEvents">Female Events</string>
    <string name= "filterFemaleEvents">FILTER EVENTS BASED ON GENDER</string>
    <string name= "logOut">Logout</string>
    <string name= "showLogOut">RETURN TO LOGIN SCREEN</string>

</resources>