<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:stretchColumns="3"
        tools:context=".view.MainActivity">

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost"/>

            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="text"
                tools:text="10.0.2.2" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort"/>
            <EditText
                android:id="@+id/serverPort"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="text"
                tools:text="8080" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/userName"/>
            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="text"
                tools:text="venusccy" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/passWord"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="textPassword"
                tools:text="97525076" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/firstName"/>
            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="text"
                tools:text="Venus" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/lastName"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:layout_span="3"
                tools:text="Chan" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="3"
                android:inputType="text"
                tools:text="venusccy@byu.edu" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="15dp"
                android:gravity="end"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="25dp"
            android:gravity="center">


            <Button
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signinButton"/>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"/>
        </LinearLayout>
    </TableLayout>

    </ScrollView>
</FrameLayout>